--- a/css/style.css
+++ b/css/style.css
@@ -15,9 +15,6 @@ html, body {
     font-size: 32px;
     margin-bottom: 20px;
 }
-.board {
-    position: relative;
-}
 td {
     border: 2px solid #333;
     width: 100px;
@@ -50,6 +47,7 @@ table tr:last-child td {
 }
 .setting {
     display: flex;
+    margin-bottom: 20px;
 }
 .btn {
     height: 60px;
@@ -73,4 +71,12 @@ table tr:last-child td {
 }
 .setting > *:not(:last-child) {
     margin-right: 20px;
+}
+.message__total {
+    text-transform: uppercase;
+    font-size: 24px;
+    border: 2px solid #000;
+    padding: 4px;
+    background: green;
+    font-weight: 400;
 }
